# joshpy

./: .dockerignore  .gitignore  BATCH_INTEGRATION.md  DEMO.ipynb  JOSH_FIXES.md  LICENSE  PR7_PLAN.md  README.md  REPLICATE_BACKFILL.md  devcontainer-podman-compatibility.md  llms-full.txt  pixi.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: docs.yml  test.yml  zizmor.yml
docs/: _quarto.yml  architecture.qmd  best-practices.qmd  demo.html  demo.qmd  demo_analysis.html  demo_analysis.qmd  demo_manual.html  demo_manual.qmd  demo_sweep_manager.html  demo_sweep_manager.qmd  demo_sweep_manager.rmarkdown  index.qmd  objects.json  templating.qmd
docs/explanation/: index.qmd
docs/getting-started/: index.qmd  installation.qmd  quickstart.qmd
docs/how-to/: index.qmd
docs/reference/: index.qmd
docs/tutorials/: adaptive-sweep.qmd  analysis.qmd  bottling-runs.qmd  complete-example.qmd  debug-inspection.qmd  external-data-sweep.qmd  gridspec-variant-sweeps.qmd  index.qmd  inspecting-runs.qmd  jar-management.qmd  (+12 more)
examples/: adaptive_fire.josh  external_sweep.josh  hello_cli.josh  hello_cli_configurable.josh  profiler_after.josh  profiler_before.josh  quickstart.josh  quickstart_debug.josh  spinup_spindown.josh  sweep_config.yaml  sweep_demo.py  sweepconfig.jshc  timestep_intervention.josh  tutorial_sweep.josh  variant_sweep.josh.j2
joshpy/: __init__.py  batch_orchestrator.py  bottle.py  catalog.py  cell_data.py  cli.py  config_parser.py  definitions.py  diagnostics.py  geocode.py  grid.py  jar.py  jobs.py  jshd.py  metadata.py  parse.py  registry.py  remote.py  schema.py  strategies.py  strategy.py  sweep.py  targets.py  test_cell_data.py  test_jar.py  test_jobs.py  test_metadata.py  test_registry.py  virtual_file.py
scripts/: configure-reticulate.sh  get_jars.py  render-docs.sh
tests/: __init__.py  conftest.py  test_batch_orchestrator.py  test_bottle.py  test_catalog.py  test_cell_data.py  test_cli.py  test_config_parser.py  test_debug.py  test_diagnostics.py  test_diff.py  test_geocode.py  test_grid.py  test_jar.py  test_jfr.py  test_jobs.py  test_jshd.py  test_jshdz_integration.py  test_load_results.py  test_minio_integration.py  test_parse.py  test_registry.py  test_strategies.py  test_sweep.py  test_targets.py  test_virtual_file.py
(+69 files in other folders)
