[project]
name = "joshpy"
version = "0.0.2"
authors = [
  { name="Nick Gondek", email="npg@berkeley.edu" },
  { name="A Samuel Pottinger", email="sam.pottinger@berkeley.edu" },
]
description = "Tools for interacting with Josh simluations from Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  "requests ~= 2.32.3",
  "matplotlib>=3.5",
]

[tool.setuptools.package-data]
joshpy = ["py.typed"]

[project.urls]
"Homepage" = "https://joshsim.org"
"Documentation" = "https://joshsim.org/integration.html"
"Source" = "https://github.com/SchmidtDSE/josh"
"Issue Tracker" = "https://github.com/SchmidtDSE/josh/issues"
"Changelog" = "https://github.com/SchmidtDSE/josh#version-history"

[project.optional-dependencies]
jobs = [
  "jinja2>=3.0",
  "pyyaml>=6.0",
]
numpy = [
  "numpy>=1.24",
]
registry = [
  "duckdb>=0.9",
]
all = [
  "jinja2>=3.0",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "duckdb>=0.9",
]
dev = [
  "build",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.0",
  "ruff>=0.1",
  "pdoc",
  "twine",
  "types-requests",
  "jinja2>=3.0",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "types-pyyaml",
  "duckdb>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["joshpy"]
